unpackaged/main/default/objects/Async_Job_Request__c/Async_Job_Request__c.object-meta.xml
<CustomObject>
    <label>Async Job Request</label>
    <nameField>
        <displayFormat>ASJ-{000000}</displayFormat>
        <label>Async Job Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Job Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>