unpackaged/main/default/objects/Async_Job_Request__c/fields/ContextInformation__c.field-meta.xml
<CustomField>
    <fullName>ContextInformation__c</fullName>
    <label>Context Information</label>
    <length>50</length>
    <type>Text</type>
</CustomField>