unpackaged/main/default/objects/Async_Job_Request__c/fields/RunningJobId__c.field-meta.xml
<CustomField>
    <fullName>RunningJobId__c</fullName>
    <label>Running Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>