unpackaged/main/default/objects/Async_Job_Request__c/fields/SerializedObject__c.field-meta.xml
<CustomField>
    <fullName>SerializedObject__c</fullName>
    <label>Serialized Object</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>