unpackaged/main/default/objects/Async_Job_Request__c/fields/TriggeringObject__c.field-meta.xml
<CustomField>
    <fullName>TriggeringObject__c</fullName>
    <defaultValue>&quot;Undefined&quot;</defaultValue>
    <label>Triggering Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Undefined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>